<resources>
    <string name="app_name">Trans Voice Studio</string>

    <string name="idle">Idle</string>
    <string name="recording">Recording</string>
    <string name="playing">Playing</string>
    <string name="herz">Hz</string>

    <string-array name="items_web_links">
        <item>http://ts-info.ru/</item>
        <item>http://personpsy.ru/</item>
        <item>http://www.transgendersurgeryworld.com/</item>
        <item>http://reconsurg.ru/</item>
        <item>https://github.com/ichi-rika/speech-analysis</item>
    </string-array>

    <!-- Strings from spectre -->
    <string name="preferences_window_type_default_value">Hamming</string>
    <string name="pay_this_record_or_stop_playing">Pay this record or stop playing</string>
    <string name="play_just_saved_record">Hold this button to play just saved record</string>
    <string name="hold_this_button_to_make_a_record">Hold this button to make a record</string>
    <string name="records">Records</string>
    <string name="spectro">Spectro</string>
    <string name="guide">Guide</string>
    <string name="feed">Feed</string>
    <string name="animated_recording_playing_indicator">Animated recording/playing indicator</string>
    <string name="send_via">Send via:</string>

    <!-- Guide -->
    <string name="fem_voice">FemVoice</string>
    <string name="muscles_and_techinques">Muscles and techinques are used for voice feminization</string>
    <string name="pass_factors">Factors of voices passing</string>
    <string name="pitch">Pitch</string>
    <string name="resonance">Resonance(Tembre)</string>
    <string name="vowels">Vowels stretching</string>
    <string name="beauty">BEAUTY</string>
    <string name="various_paths">Voice feminization is like mountain climbing: you can achieve the same goal following different paths</string>
    <string name="weight_assignment">For every each of the techniques i have assigned a number of points, which represents the contribution of this technique to overall pass</string>
    <string name="points_required">Let say it is required 12 points to achieve voice passing. This means, if you would master set of techniques, which have at least 12 points in total, you might expect voice passing</string>
    <string name="mixed_register">Mixed voice register</string>
    <string name="chricothyroyd_thyroarythoid">Simultaneously using Cricothyroid muscles(up to 90+ percent) with a slight tension(less than 15 percent) in the Thyroarytenoid muscles, you can achieve mixed register.</string>
    <string name="beware_of_falsetto">Beware of overusing Thyroarytenoid muscles in pursuit for higher pitch. This leads to falsetto and can damage your vocal cords</string>
    <string name="laryngs_up">Resonance(timbre) can be increased by pulling the larynx upwards</string>
    <string name="inner_space">By Mylohyoid, Stylohyoid and Digastric muscles, which are attached to the top of the Hyoid bone, pull the larynx as high as possible, shrink the inner space thus increase resonance frequency.</string>
    <string name="inner_space_simple_way">This is the simplest way to achieve this:</string>
    <string name="deep_breath_in">Make a deep breath in;</string>
    <string name="swallow">Do a swallow, like you drinking water;</string>
    <string name="stop_at_highest">Stop at the very top of swallowing;</string>
    <string name="exhale_out">Breath out, maintaining the upward position of the larynx.</string>
    <string name="false_folds">False folds</string>
    <string name="cannot_control_directly">Unfortunately, there is no mean to control false folds explicitly. However, they folds to the sides of throat when you smiling or laughing</string>
    <string name="inner_space_shrinking">This flattens inner space of the voice box, increasing its resonant frequency significantly.</string>
    <string name="grounded_breath">Breathing - “Supported singing”</string>
    <string name="belly_breath">Издавать звуки на выдохе животом - и есть то, что называют “петь на опоре”.</string>
    <string name="ground_voice_and_stick_it_to_the_soft_pallete">“Поставить голос на опору и упереть в нёбо”</string>
    <string name="soft_pallete">Мягкое нёбо</string>
    <string name="soft_pallete_usage">Мягкое нёбо можно произвольно поднимать и опускать, выбирая путь следования воздушного потока.</string>
    <string name="soft_pallete_half_raised">Если поддерживать мягкое нёбо в полуподнятом состоянии, можно немного сократить внутреннее пространство</string>
    <string name="tongue_tubing">Язык в трубочку</string>
    <string name="tongue_tubing_simple_way">Проще всего это сделать так:</string>
    <string name="left_edge_to_right_gum">Потянуться левой кромкой языка до левой верхней десны;</string>
    <string name="right_edge_to_left_gum">Потянуться правой кромкой языка до правой верхней десны;</string>
    <string name="both_of_these_simutaniosly">Делать оба этих действия это одновременно</string>
    <string name="rear_tongue_rising">Стараясь приподнимать заднюю часть языка над нижними задними зубами, можно значительно сократить внутреннее пространство а также исключить массивные зубы из процесса звукоизвлечения, скрывая их за мягким языком.</string>
    <string name="dynamic_loudness_and_pitch">Динамическая громкость и динамическая частота</string>
    <string name="smoothness_first">Произнося фразу, следует сперва сконцентрироваться на плавном наращивании и затухании громкости, пускай и в ущерб четкости звуков.</string>
    <string name="smooth_loudness">Громкость - плавно изменяется в соответствии со звуками: плавно нарастает в начале слова и плавно снижается к завершению звучания.</string>
    <string name="random_pitch">Частота - изменяется постоянно и произвольно</string>
    <string name="signal_quality">Всё это вместе ухудшает качество звукового сигнала</string>
    <string name="pass_improvement">Однако, поднимает степень "пасса"</string>
    <string name="conclusion">Заключение:</string>
    <string name="summ_of_points">Совсем не обязательно владеть и применять каждый из приёмов,  для уверенного пасса достаточно лишь набрать в сумме 12 баллов.</string>
    <string name="various_techniques">Овладение каждым приёмом возможно по разному: Например, для овладения Микстом можно использовать певческий приём “Штробасс”, а для “Пение на опоре” - не что иное, как “Киай”, обыкновение совершать действия на выдохе животом, характерное для боевых искусств.</string>
    <string name="samples_and_testing">Очень помогут в обучении приложения, которые могут показывать спектрограмму звука, а также записывать звук для последующего анализа.  Рекомендую сделать несколько разных образцов речи с задействованием различных приёмов феминизации и передать их доверенным лицам для оценки пасса. На свой собственный голос в записи ориентироваться нельзя!</string>
    <string name="no_doubt">Нет никаких сомнений в том, что Вы освоите голос, вопрос лишь в том, сколько для этого потребуется времени и усилий!</string>
</resources>
