<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_records">

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.gmail.sasha.inverse.transvoicestudio.view.fragments.records.RecordsFragment"
        android:label="@string/records"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_spectro"
        android:name="com.gmail.sasha.inverse.transvoicestudio.view.fragments.spectro.SpectroFragment"
        android:label="@string/spectro"
        tools:layout="@layout/fragment_spectro" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.gmail.sasha.inverse.transvoicestudio.view.fragments.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" />
</navigation>
